<resources>
    <string name="app_name">Tweeter</string>

    <string name="logoutMenuTitle">Logout</string>

    <string name="homePageTitle">Home</string>
    <string name="userImageContentDescription">The user\'s image</string>

    <string name="title_activity_main">Tweeter</string>
    <string name="loadingData">Loading More Data…</string>
    <string name="feedTabTitle">Feed</string>
    <string name="storyTabTitle">Story</string>
    <string name="followingTabTitle">Following</string>
    <string name="followersTabTitle">Followers</string>

    <string name="sampleAlias">"@UserAlias"</string>
    <string name="sampleUserName">The User</string>
    <string name="sampleTimeStamp">Time Stamp</string>
    <string name="samplePost">Sample Post</string>
    <string name="title_activity_login">Sign in</string>
    <string name="followeeCount">Following: %d</string>
    <string name="followerCount">Followers: %d</string>

<!--    Added from CS240-->

    <string name="login_host">Server Host:</string>
    <string name="login_port">Server Port:</string>
    <string name="login_userName">User Name:</string>
    <string name="login_password">Password:</string>
    <string name="login_firstName">First Name:</string>
    <string name="login_lastName">Last Name:</string>
    <string name="login_choosePhoto">Choose Photo</string>
    <string name="login_signIn">Sign In</string>
    <string name="login_Register">Register</string>
    <string name="title_activity_maps">Map</string>

    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="gender">Gender</string>
</resources>
